kubernetes/whoami/base/deploy.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: whoami
  labels:
    app: whoami
    app.kubernetes.io/name: whoami
spec:
  selector:
    app: whoami
  ports:
  - name: api
    port: 3000
    protocol: TCP
    targetPort: api

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: whoami
  labels:
    app: whoami
    app.kubernetes.io/name: whoami
spec:
  selector:
    matchLabels:
      app: whoami
  template:
    metadata:
      labels:
        app: whoami
        app.kubernetes.io/name: whoami
    spec:
      containers:
      - name: whoami
        image: traefik/whoami:latest
        resources:
          limits:
            memory: "128Mi"
            cpu: "500m"
        ports:
        - containerPort: 3000
          name: api
        args:
          - '--name=iamfoo'
          - '--port=3000'
