kubernetes/whoami/base/traefik.yaml
---
# Redirect to https
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: whoami-redirect-https
spec:
  redirectScheme:
    scheme: https
    permanent: true
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: whoami-tls
  labels:
    app: whoami
    app.kijowski.io/name: whoami
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`whoami.k8s.kijowski.casa`)
      kind: Rule
      services:
        - name: whoami
          kind: TraefikService

  tls:
    certResolver: aws-dns
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: whoami
  labels:
    app: whoami
    app.kijowski.io/name: whoami
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`whoami.k8s.kijowski.casa`)
      kind: Rule
      services:
        - name: noop@internal
          kind: TraefikService
      middlewares:
        - name: whoami-redirect-https
